# streamflow

./: .coveragerc  .dockerignore  .flake8  .gitignore  .travis.yml  AGENTS.md  CHANGELOG.md  CITATION.cff  CONTRIBUTING.md  Dockerfile  MANIFEST.in  Makefile  Pipfile  README.md  antlr4-generator.sh  bandit-requirements.txt  build-docker  codecov.yml  conformance-test.sh  cwl-conformance-test.bat  cwl-conformance-test.sh  lint-requirements.txt  pyproject.toml  pytest.ini  report-requirements.txt  requirements.txt  setup.cfg  setup.py  test-requirements.txt  tox.ini
.agents/skills/code-style/: SKILL.md
.agents/skills/docs/: SKILL.md
.agents/skills/git/: SKILL.md
.agents/skills/mypy/: SKILL.md
.agents/skills/testing/: SKILL.md
.claude/skills/docs/: SKILL.md
.claude/skills/mypy/: SKILL.md
.github/: dependabot.yml
.github/actions/codecov/: action.yml
.github/codeql/: config.yml
.github/kind/: config.yaml
.github/workflows/: ci-tests.yaml  ci-tests.yml  cwl-conformance.yaml  docker.yaml  github-release.yaml  pypi.yaml  release.yml  sf-tests.yaml
benchmark/: conftest.py  test_remotepath.py  utils.py
docker/helm/: Dockerfile
docs/: .wci.yml  Makefile  README.md  requirements.txt
docs/examples/quickstart/: README.md  hello-workflow.cwl  inputs.yml  streamflow.yml
docs/source/: architecture.rst  conf.py  index.rst  install.rst  operations.rst  references.bib
docs/source/_static/: theme_overrides.css
docs/source/advanced/: multiple-targets.rst  port-targets.rst  stacked-locations.rst
docs/source/connector/: container.rst  docker-compose.rst  docker.rst  flux.rst  helm2.rst  helm3.rst  helm4.rst  kubernetes.rst  occam.rst  pbs.rst  queue-manager.rst  singularity.rst  slurm.rst  ssh.rst
docs/source/cwl/: cwl-conformance.rst  cwl-runner.rst  docker-requirement.rst
docs/source/developer-guide/: index.rst
docs/source/ext/: binding-filter.rst  connector.rst  cwl-docker-translator.rst  data-manager.rst  database.rst  deployment-manager.rst  fault-tolerance.rst  plugins.rst  scheduling.rst
docs/source/guide/: architecture.rst  bind.rst  cwl.rst  deployments.rst  inspect.rst  install.rst  run.rst
docs/source/reference/: glossary.rst  index.rst
docs/source/user-guide/: binding-workflows.rst  binding-workflows.rst.backup  configuring-deployments.rst  configuring-deployments.rst.backup  inspecting-results.rst  installation.rst  installation.rst.backup  quickstart.rst  quickstart.rst.backup  running-workflows.rst  troubleshooting.rst  writing-workflows.rst
docs/tests/: test_examples.py
examples/failure/: streamflow.yml
examples/failure/cwl/: config.yml  main.cwl  master.cwl
examples/flux/: Dockerfile  README.md  streamflow.yml
examples/flux/cwl/: config.yml  main.cwl
examples/mpi/: streamflow.yml
examples/mpi/cwl/: main.cwl
examples/munipack/: streamflow.yml
examples/munipack/cwl/: config.yml  download_data.sh  main.cwl  master.cwl  pre_correction.cwl  stack.cwl
helm/chart/: Chart.yaml  values.yaml
helm/chart/templates/: NOTES.txt  _helpers.tpl  configmap.yaml  job.yaml  role.yaml  rolebinding.yaml  serviceaccount.yaml
helm/docker/helm2/: Dockerfile
scripts/: antlr4-generator.sh
streamflow/: __init__.py  __main__.py  ext.py  log_handler.py  main.py  myconfig.py  parser.py  report.py  token_printer.py  version.py
streamflow/config/: __init__.py  config.py  schema.py  validator.py
streamflow/connector/: connector.py  deployment_manager.py  docker_compose.py  helm.py  occam.py
streamflow/core/: asyncache.py  command.py  config.py  context.py  data.py  deployment.py  exception.py  hardware.py  persistence.py  processor.py  provenance.py  recovery.py  scheduling.py  utils.py  workflow.py
streamflow/cwl/: combinator.py  command.py  condition.py  context.py  executor.py  expression.py  hardware.py  job.py  job_context.py  main.py  process.py  processor.py  remote_fs_access.py  remote_path_mapper.py  runner.py  step.py  token.py  token_processor.py  transformer.py  translator.py  utils.py  workflow.py
streamflow/cwl/antlr/: ECMAScriptLexer.py  ECMAScriptListener.py  ECMAScriptParser.py
streamflow/cwl/provenance/: __init__.py  run_crate.py
streamflow/data/: __init__.py  aiotar.py  aiotarstream.py  data_manager.py  manager.py  remote_fs.py  remotepath.py  stream.py  utils.py
streamflow/data/schemas/: data_manager.json
streamflow/deployment/: __init__.py  aiotarstream.py  base.py  deployment_manager.py  docker.py  docker_compose.py  future.py  helm.py  manager.py  occam.py  shell.py  slurm.py  ssh.py  stream.py  template.py  utils.py  wrapper.py
streamflow/deployment/connector/: __init__.py  ssh.py  (+11 more)
streamflow/ext/: plugin.py  utils.py
streamflow/hardware/: device.py
streamflow/persistence/: __init__.py  base.py  loading_context.py  persistence_manager.py  sqlite.py  utils.py
streamflow/provenance/: __init__.py  run_crate.py
streamflow/recovery/: __init__.py  checkpoint_manager.py  failure_manager.py  recovery.py  rollback_recovery.py  utils.py
streamflow/scheduling/: __init__.py  policy.py  scheduler.py  utils.py
streamflow/workflow/: __init__.py  combinator.py  command.py  exception.py  executor.py  port.py  step.py  task.py  token.py  transformer.py  utils.py
tests/: conftest.py  pod.jinja2  test_aiotar.py  test_aiotarstream.py  test_asyncache.py  test_binding_filter.py  test_build_wf.py  test_change_wf.py  test_connector.py  test_cwl_build_wf.py  test_cwl_change_wf.py  test_cwl_conformance.py  test_cwl_execution.py  test_cwl_loop.py  test_cwl_persistence.py  test_cwl_provenance.py  test_data_manager.py  test_database.py  test_dummy.py  test_failure.py  test_persistence.py  test_provenance.py  test_recovery.py  test_recovery_utils.py  test_remotepath.py  test_report.py  test_run_crate.py  test_scheduler.py  test_schema.py  test_transfer.py  test_translator.py
tests/cwl-conformance/: conftest.py  streamflow-docker.yml  streamflow-kubernetes.yml  streamflow-singularity.yml
tests/cwl-example/: config.yml
tests/utils/: connector.py  cwl.py  data.py  deployment.py  get_instances.py  utils.py  workflow.py
(+175 files in other folders)
