[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "streamflow"
authors = [
    {name = "Iacopo Colonnelli", email = "iacopo.colonnelli@unito.it"}
]
description = "StreamFlow framework"
readme = "README.md"
requires-python = ">=3.10"
license = {text = "LGPL-3.0-or-later"}
classifiers = [
    "Development Status :: 4 - Beta",
    "License :: OSI Approved :: GNU Lesser General Public License v3 (LGPLv3)",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "Operating System :: POSIX",
    "Operating System :: MacOS",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "Topic :: Scientific/Engineering",
    "Topic :: System :: Distributed Computing"
]
dependencies = [
    "aiohttp==3.13.3",
    "aiosqlite==0.22.1",
    "antlr4-python3-runtime==4.13.2",
    "asyncssh==2.22.0",
    "bcrypt==5.0.0",
    "cachetools==6.2.4",
    "cwl-utils==0.40",
    "importlib-metadata==8.7.1",
    "Jinja2==3.1.6",
    "jsonschema==4.26.0",
    "kubernetes_asyncio==34.3.3",
    "psutil==7.2.1",
    "referencing==0.37.0",
    "rdflib==7.5.0",
    "typing-extensions==4.15.0",
    "yattag==1.16.1"
]
version = "0.2.0.dev14"

[project.optional-dependencies]
report = [
    "pandas==2.3.3",
    "plotly==6.5.2",
    "kaleido==1.2.0"
]

[project.scripts]
cwl-runner = "streamflow.cwl.runner:run"
streamflow = "streamflow.main:run"

[project.urls]
Homepage = "https://streamflow.di.unito.it"
Package = "https://pypi.org/project/streamflow"
Repository = "https://github.com/alpha-unito/streamflow"
Docker = "https://hub.docker.com/r/alphaunito/streamflow"

[dependency-groups]
dev = [
    {include-group = "bandit"},
    {include-group = "docs"},
    {include-group = "lint"},
    {include-group = "test"}
]
bandit = [
    "bandit==1.9.3"
]
docs = [
    "sphinx==8.1.3",
    "sphinx-jsonschema==1.19.2",
    "sphinx-llms-txt==0.7.1",
    "sphinx-rtd-theme==3.1.0"
]
lint = [
    "black==26.1.0",
    "codespell==2.4.1",
    "flake8-bugbear==25.11.29",
    "isort==7.0.0",
    "pyupgrade==3.21.2"
]
test = [
    "cwltest==2.6.20251216093331",
    "cwltool==3.1.20260108082145",
    "pytest==9.0.2",
    "pytest-asyncio==1.3.0",
    "pytest-cov==7.0.0",
    "pytest-xdist==3.8.0"
]

[tool.setuptools]
packages = [
    "streamflow",
    "streamflow.config",
    "streamflow.core",
    "streamflow.cwl",
    "streamflow.cwl.antlr",
    "streamflow.cwl.requirement",
    "streamflow.cwl.requirement.docker",
    "streamflow.data",
    "streamflow.deployment",
    "streamflow.deployment.connector",
    "streamflow.deployment.filter",
    "streamflow.ext",
    "streamflow.persistence",
    "streamflow.provenance",
    "streamflow.recovery",
    "streamflow.recovery.policy",
    "streamflow.scheduling",
    "streamflow.scheduling.policy",
    "streamflow.workflow"
]
zip-safe = true

[tool.setuptools.package-data]
"streamflow.config" = ["schemas/v1.0/*.json"]
"streamflow.cwl.requirement.docker" = ["schemas/*.jinja2", "schemas/*.json"]
"streamflow.data" = ["schemas/*.json"]
"streamflow.deployment" = ["schemas/*.json"]
"streamflow.deployment.connector" = ["schemas/base/*.json", "schemas/*.json"]
"streamflow.deployment.filter" = ["schemas/*.json"]
"streamflow.persistence" = ["schemas/*.sql", "schemas/*.json"]
"streamflow.recovery" = ["schemas/*.json"]
"streamflow.scheduling" = ["schemas/*.json"]
"streamflow.scheduling.policy" = ["schemas/*.json"]

[tool.codespell]
ignore-words-list = "Crate,crate,NotIn,notin"

[tool.coverage.run]
branch = true
source_pkgs = ["streamflow"]
omit = ["streamflow/cwl/antlr/*"]

[tool.coverage.report]
exclude_lines = [
    # Exclude not implemented methods
    "raise NotImplementedError",
    # Exclude abstract methods
    "@(abc\\.)?abstractmethod",
    # Exclude Python script entrypoints
    "if __name__ == .__main__.:",
    # Exclude type checking lines
    "if TYPE_CHECKING:",
    # Exclude log messages
    "if logger.isEnabledFor"
]
ignore_errors = true
omit = [
    "streamflow/__main__.py",
    "tests/*"
]

[tool.black]
exclude = "streamflow/cwl/antlr"

[tool.isort]
profile = "black"
skip = "streamflow/cwl/antlr"